# libimobiledevice-win32-patchs

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  export.sh  import.sh  patch-status.sh  patch.sh  vcpkg.json
cmake/: cmake_utility.cmake
patchs/: batch.sh  patch-cli.in  patch.sh
patchs/idevicerestore/: 0001-Add-Support-MSVC-compile.patch  0001-Fix-ace3.c-compilation-issues-in-msvc.patch  0001-fix-msvc-null-pointer-arithmetic-problem.patch  0002-Compatible-with-libirecovery-static-library-mode.patch  0002-Fix-fls.c-compilation-issues-in-msvc.patch  0002-Fixed-stat-failed-in-win32-large-files.patch  0003-Fix-fls.h-compilation-issues-in-msvc.patch  0003-Fixed-stat-failed-in-win32-large-files.patch  0003-Fixed-win32-_stat64-utf-8-filename-bug.patch  0004-Fix-ftab.c-compilation-issues-in-msvc.patch  0004-Fixed-Error-C2016.patch  0004-Fixed-win32-_stat64-utf-8-filename-bug.patch  0005-Fix-mbn.h-compilation-issues-in-msvc.patch  0005-Fix-restore.c-compilation-issues-in-msvc.patch  0005-Fixed-Error-C2016.patch  0005-opt-errno-is-set-when-optimizing-ipsw-open-fails.patch  0006-Fix-ipsw.c-utf-8-filename-bug-in-msvc.patch  0006-Fix-restore.c-compilation-issues-in-msvc.patch  0006-opt-errno-is-set-when-optimizing-ipsw-open-fails.patch  0007-Fix-ipsw-large-files-bug-in-win32.patch  0007-Fix-ipsw.c-utf-8-filename-bug-in-msvc.patch  0008-Fix-ipsw-large-files-bug-in-win32.patch  0008-Fix-mbn.c-compilation-issues-in-msvc.patch  CMakeLists.txt  libgen.h  msvc.h  patch-version  unistd.h
patchs/libimobiledevice/: 0001-Fix-LNK2019-for-ntohl-and-ntohs-symbol-on-MSVC.patch  0001-fix-afcclient-Fix-link-issues-caused-by-conflicts-be.patch  0001-fix-static-build.patch  0001-fix-static-library-compilation-problems.patch  0002-fix-ideviceprovision-compilation-problem.patch  CMakeLists.txt  msvc.h  patch-version
patchs/libimobiledevice-glue/: 0001-Fix-Inelegant-fix-for-initialization-issues-on-MSVC.patch  CMakeLists.txt  msvc.h  patch-version
patchs/libimobiledevice/sys/: time.h
patchs/libirecovery/: 0001-001_fix_static_build.patch  0001-Fix-array-initialization-compatibility-with-MSVC.patch  0001-PATCH-001_fix_static_build.patch  0002-Fixed-usleep-failing-to-compile-under-win.patch  001_fix_static_build.patch  CMakeLists.txt  msvc.h  patch-version  unistd.h
patchs/libplist/: 0001-001_fix_msvc.patch  0002-002_fix_tools_msvc.patch  0003-003_fix_build_dll.patch  0004-004_fix_static_build.patch  003_fix_build_dll.patch  004_fix_static_build.patch  CMakeLists.txt  patch-version
patchs/libtatsu/: CMakeLists.txt  msvc.h  patch-version
patchs/libusbmuxd/: 0001-001_fix_win32_defs.patch  0002-002_fix_struct_pack.patch  0003-003_fix_tools_msvc.patch  CMakeLists.txt  msvc.h  patch-version
